--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         // --- 1. 深度導覽資料 (Expanded & Iconized) ---
         const guideData = [
             {
-                id: 'tower_london', icon: 'fa-chess-rook', title: '倫敦塔', en: 'Tower of London', tag: '世界遺產',
+                id: 'tower_london', icon: 'fa-chess-rook', title: '倫敦塔', en: 'Tower of London', tag: '世界遺產',img: 'tower.jpg',
                 intro: '這座矗立在泰晤士河畔近千年的堡壘，見證了英國最黑暗與榮耀的歷史。它曾是皇宮、軍火庫、鑄幣廠，也是令人聞風喪膽的國家監獄與刑場。',
                 details: [
                     { title: '白塔 (White Tower)', content: '由征服者威廉於 1078 年下令建造，是諾曼軍事建築的典範。現在內部展示著歷代國王的豪華盔甲，包括亨利八世那套著名的巨大盔甲。' },
@@ -850,4 +850,5 @@
         };
     </script>
 </body>
+
 </html>
