--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="flex justify-between items-end mt-2 relative z-10">
             <div>
                 <p class="text-antique-gold text-xs font-bold uppercase tracking-widest mb-1">Travel Itinerary</p>
-                <h1 class="font-serif text-2xl font-bold tracking-wide">敦好敦滿</h1>
+                <h1 class="font-serif text-2xl font-bold tracking-wide">英國倫敦</h1>
             </div>
             <div class="text-right">
                 <span class="block text-3xl font-cinzel text-white leading-none">Feb</span>
@@ -444,13 +444,95 @@
             { id: 'tower_london', icon: 'fa-solid fa-chess-rook', title: '倫敦塔', en: 'Tower of London', tag: '世界遺產', img: 'tower.jpg', intro: '這座矗立在泰晤士河畔近千年的堡壘，見證了英國最黑暗與榮耀的歷史。它曾是皇宮、軍火庫、鑄幣廠，也是令人聞風喪膽的國家監獄與刑場。', details: [{ title: '白塔 (White Tower)', content: '由征服者威廉於 1078 年下令建造，是諾曼軍事建築的典範。現在內部展示著歷代國王的豪華盔甲，包括亨利八世那套著名的巨大盔甲。' }, { title: '皇冠珠寶 (Crown Jewels)', content: '絕對必看！位於滑鐵盧兵營內，展示著仍在使用的帝國皇冠（鑲有 2868 顆鑽石）。注意尋找權杖上的「非洲之星 I」（530克拉）以及太后皇冠上的「光之山」鑽石。' }, { title: '渡鴉傳說', content: '傳說如果塔裡的六隻渡鴉飛走，王國就會崩塌。因此這裡有專門的「渡鴉官」照料牠們，且牠們的單側翅膀羽毛稍作修剪以防飛離。' }, { title: '血腥歷史', content: '這裡曾處決過三位英格蘭王后，包括安妮·博林。綠塔 (Tower Green) 遺址設有紀念碑，是曾經的高貴囚犯被斬首之地。' }] },
             { id: 'borough_market', icon: 'fa-solid fa-utensils', title: '波羅市場', en: 'Borough Market', tag: '美食聖地', img: 'market.jpg', intro: '倫敦最古老的食品市場，位於鐵路高架橋下的獨特工業風格。這裡是全球老饕的必訪之地，匯集了英國最棒的農產品與街頭小吃。', details: [{ title: '必吃推薦', content: '<ul><li><strong>Richard Haward\'s Oysters</strong>：新鮮便宜的生蠔，搭配紅酒醋與塔巴斯科辣椒醬。</li><li><strong>Monmouth Coffee</strong>：倫敦傳奇咖啡，手沖與拿鐵都極具水準。</li><li><strong>Bread Ahead</strong>：著名的爆漿甜甜圈，香草與焦糖口味最受歡迎。</li><li><strong>西班牙燉飯</strong>：現煮的大鍋海鮮燉飯，香氣四溢。</li></ul>' }, { title: '哈利波特取景', content: '市場旁的鐵路橋下是《哈利波特：阿茲卡班的逃犯》中，騎士公車停靠「破釜酒吧」的入口拍攝地。' }] },
             { id: 'westminster', icon: 'fa-solid fa-crown', title: '西敏寺', en: 'Westminster Abbey', tag: '皇室教堂', img: 'westminster.jpg', intro: '英國皇室的御用教堂，宏偉的哥德式建築傑作。自 1066 年以來，幾乎所有英國君主的加冕典禮都在此舉行。', details: [{ title: '重要典禮', content: '威廉王子與凱特王妃的婚禮、伊莉莎白二世女王的國葬皆在此舉行。' }, { title: '詩人角 (Poets\' Corner)', content: '位於南耳堂，埋葬或紀念了許多偉大的文學家，包括喬叟、狄更斯、哈代，以及莎士比亞的紀念碑。' }, { title: '加冕椅', content: '那張古老且看似破舊的木椅，是自 1308 年以來每位君主加冕時必須坐的椅子，極具歷史價值。' }] },
-            { id: 'dungeon', icon: 'fa-solid fa-skull', title: '倫敦地牢', en: 'The London Dungeon', tag: '驚悚體驗', img: 'dungeon.jpg', intro: '結合歷史、恐怖與黑色幽默的沈浸式劇場。透過真人演員與特效，重現倫敦歷史上最黑暗的時期。', details: [{ title: '1. 地牢入口', content: '遊客進入地牢的第一刻，就會看到穿著中世服裝的小丑迎接。' }, { title: '2. 陰謀者小徑', content: '走進狹窄的石板巷道，黑袍角色低聲討論著「火藥陰謀」。' }, { title: '3. 火藥陰謀揭露', content: '蓋伊·福克斯陰謀被揭發，四周堆滿火藥桶。' }, { title: '4. 酷刑室', content: '展示中世倫敦常用的審訊與刑具。' }, { title: '5. 瘟疫屋', content: '走進霧氣瀰漫的屋子，模擬 1665 年黑死病肆虐。' }, { title: '6. 鼠巷', content: '沿著狹窄的巷道前進，周圍布滿垃圾、老鼠聲和陰影。' }, { title: '7. 白教堂迷宮', content: '重現開膛手傑克謀殺案的街道迷宮。' }, { title: '8. 十鈴酒吧', content: '在酒吧場景中，聽酒吧老闆講述傑克犯罪故事。' }, { title: '9. 古代法庭', content: '進入模擬法庭，演員重現審判過程。' }, { title: '10. 逃出紐蓋特監獄', content: '模擬囚犯逃脫過程，通過鐵籠、暗門和鐵鏈。' }, { title: '11. 洛維特夫人派店', content: '黑色幽默的派店場景，講述「肉派的秘密」。' }, { title: '12. 理髮師陶德', content: '重現割喉理髮店，燈光陰暗、聲效逼真。' }, { title: '13. 驚悚落下體驗', content: '刺激的落下設施，在黑暗中快速下降。' }, { title: '14. 暴君之河', content: '水上旅程模擬亨利八世暴政，乘船穿過暗河。' }, { title: '15. 維多利亞酒館', content: '旅程收尾的酒館，復古道具展示維多利亞時期夜生活。' }] },
+            { 
+                id: 'dungeon', 
+                icon: 'fa-solid fa-skull', 
+                title: '倫敦地牢', 
+                en: 'The London Dungeon', 
+                tag: '驚悚體驗', 
+                img: 'dungeon.jpg', 
+                intro: '結合歷史、恐怖與黑色幽默的沈浸式劇場。透過真人演員與特效，重現倫敦歷史上最黑暗的時期。', 
+                details: [
+                    { title: '1. 地牢入口 / The Descent（小丑迎賓）', content: '遊客進入地牢的第一刻，就會看到穿著中世服裝的小丑（Jester／弄臣）迎接。他會用幽默、挑釁的語氣與遊客互動，講笑話、調侃你是否能活過旅程，甚至挑選觀眾上台，為整個體驗營造黑色幽默與恐怖交織的氣氛。樓梯和斜坡設計配合煙霧與陰暗燈光，讓人仿佛真的進入倫敦黑暗深處。' },
+                    { title: '2. Conspirators Walk（陰謀者小徑）', content: '走進狹窄的石板巷道，遊客會看到黑袍角色密談，他們低聲討論著「火藥陰謀」炸毀國會的計畫。巷道中布滿燭光閃爍的壁燈和陰影，演員會時不時盯著遊客，讓人彷彿成為陰謀的一部分，感受到 1605 年倫敦宗教迫害和政治緊張的壓迫氣氛。' },
+                    { title: '3. Gunpowder Plot（火藥陰謀揭露）', content: '在這個場景，蓋伊·福克斯陰謀被揭發，四周堆滿火藥桶，煙霧和低沉音效營造緊張感。演員會扮演官員追捕福克斯，逼近遊客，讓你感受到即將爆炸的威脅與法律制裁的壓迫感，就像置身陰謀現場。' },
+                    { title: '4. Torture Chamber（酷刑室）', content: '這裡展示中世倫敦常用的審訊與刑具，如鐵椅、木樁和手銬。演員會模擬審訊過程，讓遊客親眼看到囚犯被審問的恐懼與痛苦，燈光聚焦刑具，聲效模擬尖叫，讓整個房間充滿壓迫感，教育與恐怖感並存。' },
+                    { title: '5. Pest House（瘟疫屋）', content: '遊客走進一間霧氣瀰漫、寒意十足的屋子，模擬 1665 年黑死病肆虐的場景。地板上放置稻草床，演員扮演病患呻吟或被隔離的居民，空氣中彷彿彌漫死亡的氣息，讓人感受到瘟疫帶來的恐慌與無力。' },
+                    { title: '6. Rat Run（鼠巷）', content: '沿著狹窄的巷道前進，周圍布滿垃圾、老鼠聲和陰影。遊客必須小心通過，燈光昏暗，演員偶爾從角落出現或用聲音嚇人，重現中世倫敦貧民區的陰暗與危險，象徵疾病與犯罪共存的街道。' },
+                    { title: '7. Mitre Square / Whitechapel Labyrinth（白教堂迷宮）', content: '這裡重現開膛手傑克謀殺案的街道迷宮。遊客穿越蜿蜒小巷，演員扮演恐慌的居民與調查警察，燈光忽明忽暗，聲效模擬雨夜腳步與尖叫，使人彷彿置身維多利亞時代東倫敦的恐怖事件現場。' },
+                    { title: '8. Jack the Ripper（十鈴酒吧）', content: '在酒吧場景中，遊客聽到酒吧老闆講述傑克犯罪故事，演員會穿梭其中與觀眾互動，仿佛故事正在發生。煙霧、低音音效與昏暗燈光讓遊客感受當時居民面對連環殺手的不安與恐懼。' },
+                    { title: '9. The Courtroom（古代法庭）', content: '遊客進入模擬法庭，看到法官、陪審團與被告的互動。演員會重現審判過程，包括控訴、辯護與判決，燈光集中在被告身上，觀眾感受到中世倫敦司法的嚴酷與不公。' },
+                    { title: '10. Escape from Newgate Prison（逃出紐蓋特監獄）', content: '場景模擬囚犯逃脫過程，遊客跟隨故事線通過鐵籠、暗門和鐵鏈，聲效與燈光營造壓迫感。演員扮演獄卒或囚犯，讓遊客感受緊張、恐懼與逃亡刺激。' },
+                    { title: '11. Mrs Lovett’s Pie Shop（洛維特夫人派店）', content: '黑色幽默的派店場景，演員扮演洛維特夫人講述「肉派的秘密」，結合恐怖與幽默，讓遊客既感到毛骨悚然又忍俊不禁，了解都市傳說中的驚悚元素。' },
+                    { title: '12. Sweeney Todd（理髮師陶德）', content: '重現理髮師陶德的割喉理髮店，燈光陰暗、聲效逼真，遊客仿佛置身恐怖傳說之中。演員互動與小型特效增加現場感，呈現民間恐怖故事如何在歷史中流傳。' },
+                    { title: '13. Drop Dead: Drop Ride（驚悚落下體驗）', content: '這是刺激的落下設施，遊客在黑暗中快速下降，多層樓的失重感象徵被處決時的恐懼，結合聲音和光效，讓整個旅程達到驚悚高潮。' },
+                    { title: '14. Tyrant Boat / Henry’s Wrath（暴君之河）', content: '水上旅程模擬亨利八世暴政，遊客乘船穿過暗河，演員扮演執行暴政的士兵與被審判者，沿途霧氣、燈光與聲音營造恐懼氛圍，使遊客感受到權力與暴力的威壓。' },
+                    { title: '15. The Tavern（維多利亞酒館）', content: '旅程收尾的酒館場景，演員互動與復古道具展示維多利亞時期夜生活。這裡既是休息區也是故事收尾，幽默與小互動讓遊客帶著驚悚又有趣的情緒離開。' },
+                    { title: '16. Photo & Queue Experience（拍照與候場區）', content: '正式進入地牢前的互動區，展示囚籠、木樁、審判符號，演員偶爾與觀眾互動。這個區域提前營造恐怖氣氛，讓遊客從一開始就沉浸於倫敦黑暗歷史的故事。' }
+                ] 
+            },
             { id: 'british_museum', icon: 'fa-solid fa-building-columns', title: '大英博物館', en: 'British Museum', tag: '世界級博物館', img: 'british_museum.jpg', intro: '成立於 1753 年，收藏了跨越人類 200 萬年歷史的珍貴文物。雖然展品來源具爭議性，但其學術價值無可比擬。', details: [{ title: '羅塞塔石碑', content: '解開古埃及文字之謎的鑰匙，館內人氣最高的鎮館之寶。' }, { title: '帕德嫩神廟石雕', content: '來自希臘雅典衛城的宏偉大理石雕塑，展現了古希臘藝術的巔峰。' }, { title: '埃及館', content: '擁有除開羅以外最豐富的木乃伊收藏，以及巨大的拉美西斯二世頭像。' }] },
-            { id: 'lion_king', icon: 'fa-solid fa-masks-theater', title: '獅子王音樂劇', en: 'The Lion King', tag: '迪士尼經典動畫改編', img: 'lion_king.jpg', intro: '發生在非洲大草原「榮耀大地」。辛巴在父親木法沙死後逃離，最終在娜拉與拉飛奇指引下，重返故鄉擊敗刀疤，恢復王位。', details: [{ title: '第一幕: Circle of Life', content: '各種動物齊聚榮耀大地，迎接辛巴誕生。' }, { title: '第一幕: I Just Can’t Wait to Be King', content: '年幼辛巴幻想成為國王，展現天真與自信。' }, { title: '第一幕: Hakuna Matata', content: '辛巴遇見丁滿與彭彭，學會無憂無慮的生活。' }, { title: '第二幕: Can You Feel the Love Tonight', content: '辛巴與娜拉重逢相愛，辛巴內心開始動搖。' }, { title: '終曲: Circle of Life', content: '辛巴登基，榮耀大地恢復生機，生命循環再次展開。' }] },
+            { 
+                id: 'lion_king', 
+                icon: 'fa-solid fa-masks-theater', 
+                title: '獅子王音樂劇', 
+                en: 'The Lion King', 
+                tag: '迪士尼經典動畫改編', 
+                img: 'lion_king.jpg', 
+                intro: '<p>故事發生在非洲大草原「榮耀大地（Pride Lands）」。</p><p>獅王 木法沙（Mufasa） 與王后 沙拉碧（Sarabi） 迎來新生王子 辛巴（Simba）。在萬物的見證下，辛巴被祝福成為未來的國王。然而，木法沙的弟弟 刀疤（Scar） 因覬覦王位，暗中策畫陰謀。</p><p>刀疤設計讓辛巴誤以為自己害死父親，木法沙在營救辛巴時遭刀疤推落山谷身亡。辛巴在罪惡感與恐懼中逃離家園。</p><p>流亡途中，辛巴遇見 彭彭（Pumbaa） 與 丁滿（Timon），過上「Hakuna Matata」的無憂生活，漸漸忘記自己的責任。多年後，辛巴長大成人，青梅竹馬 娜拉（Nala） 尋來，希望他回去拯救被刀疤與鬣狗統治、已荒蕪的榮耀大地。</p><p>在巫師 拉飛奇（Rafiki） 與父親亡靈的指引下，辛巴重新認識「生命循環」與「責任」，鼓起勇氣回到故鄉，擊敗刀疤，恢復王位，讓生命重回平衡。</p>', 
+                details: [
+                    { title: '第一幕 Act I: Circle of Life（生命之環）', content: '音樂劇在非洲大草原的日出中展開，各種動物齊聚榮耀大地，迎接獅王木法沙與王后沙拉碧之子辛巴的誕生。拉飛奇為新生王子祝福，宣告生命循環的開始，這首歌奠定全劇關於命運、自然與責任的核心主題。' },
+                    { title: 'Grasslands Chant（草原吟唱）', content: '部落式的吟唱描繪榮耀大地生生不息的活力，呈現動物與自然之間的連結，讓觀眾沉浸在非洲文化與原始能量之中，也延續「生命之環」的概念。' },
+                    { title: 'The Lion Sleeps Tonight（獅子今晚安眠）', content: '在平靜的夜晚，動物們以輕快幽默的歌聲描繪草原的日常，營造出和諧與安全的氛圍，對比日後即將發生的陰謀與悲劇。' },
+                    { title: 'I Just Can’t Wait to Be King（我迫不及待想當王）', content: '年幼的辛巴幻想成為國王後可以為所欲為，與娜拉一起嘲笑規矩與責任，展現他天真、自信卻尚未成熟的一面，也暗示他對王者責任的誤解。' },
+                    { title: 'Chow Down（大快朵頤）', content: '刀疤暗中操縱鬣狗，向他們承諾食物與權力，誘使他們成為自己的同盟。這首歌揭露刀疤的野心，也預示榮耀大地即將陷入混亂。' },
+                    { title: 'They Live in You（他們活在你心中）', content: '木法沙教導辛巴祖先的精神永遠與他同在，提醒他未來身為國王所必須承擔的責任。這首歌強調傳承與生命循環，也深化父子之間的情感連結。' },
+                    { title: 'Be Prepared（準備好）', content: '刀疤公開展露奪權的計畫，煽動鬣狗推翻現有秩序，整首歌充滿陰暗與諷刺，象徵權力被扭曲與濫用的危險。' },
+                    { title: 'The Stampede（角馬狂奔）', content: '刀疤設下陷阱，引發角馬狂奔，木法沙為救辛巴而犧牲。這一段以強烈的音樂與舞台效果呈現悲劇轉折，徹底改變辛巴的人生。' },
+                    { title: 'Rafiki Mourns（拉飛奇的哀悼）', content: '拉飛奇與動物們哀悼木法沙的死亡，榮耀大地失去了真正的國王，氣氛低沉而悲傷，象徵秩序的崩塌。' },
+                    { title: 'Hakuna Matata（哈庫那馬塔塔）', content: '逃離家園的辛巴遇見丁滿與彭彭，學會以「沒有煩惱」的態度生活。歌曲輕鬆幽默，呈現辛巴從童年到成年的成長過程，也顯示他暫時逃避了自己的責任。' },
+                    { title: '第二幕 Act II: One by One(逐步帶來改變與希望)', content: '在刀疤統治下的榮耀大地逐漸荒蕪，雌獅們在困境中彼此扶持，象徵希望並未完全消失。這首歌表現出即使在黑暗之中，生命仍能一點一滴地重新站起來。' },
+                    { title: 'The Madness of King Scar（刀疤的瘋狂）', content: '刀疤的暴政讓土地枯竭、族群失衡，他以恐懼與責任推卸來維持權力，顯示他並非真正的王者，也進一步突顯榮耀大地需要改變。' },
+                    { title: 'Shadowland（影之地）', content: '娜拉在荒蕪的土地上唱出對過去的思念與對未來的恐懼，最終決定離開家園尋找希望。這首歌展現她的勇氣與成長，是音樂劇中特別重要的情感時刻。' },
+                    { title: 'Can You Feel the Love Tonight（今夜愛無所不在）', content: '辛巴與娜拉重逢，在情感與命運的牽引下重新相愛。這首歌象徵成長後的成熟情感，也暗示辛巴內心開始動搖，逐漸面對自己的過去。' },
+                    { title: 'He Lives in You（他活在你心中）', content: '拉飛奇引導辛巴面對父親的記憶，木法沙的靈魂提醒他不要逃避自己的身分。這首歌象徵辛巴的覺醒，他終於理解責任是生命循環的一部分。' },
+                    { title: 'Simba Confronts Scar（辛巴對峙刀疤）', content: '辛巴回到榮耀大地，與刀疤正面對決，真相被揭露，他必須直面恐懼並承擔王者責任。音樂緊張而激烈，象徵成長的最後考驗。' },
+                    { title: 'King of Pride Rock / Circle of Life（終曲）', content: '辛巴登上王位，榮耀大地恢復生機，新生命誕生，生命循環再次展開。音樂回到開場的旋律，為故事畫下圓滿句點。' }
+                ] 
+            },
             { id: 'nhm', icon: 'fa-solid fa-bone', title: '自然史博物館', en: 'Natural History Museum', tag: '科學殿堂', img: 'nhm.jpg', intro: '被譽為「自然的大教堂」，維多利亞式的建築本身就是藝術品，外牆裝飾著精緻的動物浮雕。', details: [{ title: 'Hope 藍鯨', content: '懸掛在欣采大廳 (Hintze Hall) 空中的巨大藍鯨骨架，取代了以前的恐龍 Dippy，象徵對海洋的守護。' }, { title: '地球廳', content: '入口處有個穿越巨大金屬球體的紅色手扶梯，充滿科幻感，通往展示火山與地震的區域。' }] },
             { id: 'va', icon: 'fa-solid fa-palette', title: 'V&A 博物館', en: 'Victoria and Albert Museum', tag: '藝術與設計', img: 'va.jpg', intro: '全球最大的裝飾藝術與設計博物館，收藏了從古至今的時尚、珠寶、家具與雕塑。', details: [{ title: '必訪咖啡廳', content: '博物館內的 Gamble Room 是世界上最早的博物館餐廳，擁有華麗的彩繪玻璃與陶瓷裝飾，極致奢華。' }, { title: '珠寶長廊', content: '展示了超過 3000 件珠寶，包括拿破崙送給約瑟芬皇后的鑽石王冠。' }] },
             { id: 'national_gallery', icon: 'fa-solid fa-image', title: '國家美術館', en: 'The National Gallery', tag: '繪畫殿堂', img: 'national_gallery.jpg', intro: '收藏了 13 世紀至 1900 年間的西歐繪畫，包括達文西、梵谷、莫內等大師真跡。', details: [{ title: '必看名畫', content: '<ul><li>梵谷《向日葵》</li><li>達文西《岩間聖母》</li><li>范艾克《阿爾諾芬尼夫婦像》</li><li>泰納《戰艦提梅梅爾號》</li></ul>' }] },
-            { id: 'les_mis', icon: 'fa-solid fa-flag', title: '悲慘世界', en: 'Les Misérables', tag: '史詩音樂劇', img: 'les_mis.jpg', intro: '改編自雨果小說，圍繞「法律、良心、救贖與革命」。尚萬強出獄後改過自新，卻始終被警官賈維追捕，最終在愛與寬恕中獲得救贖。', details: [{ title: '第一幕: Look Down', content: '苦役場景，建立社會不公與尚萬強、賈維的對立。' }, { title: '第一幕: I Dreamed a Dream', content: '芳婷回憶破碎夢想，訴說被現實擊垮的痛苦。' }, { title: '第一幕: Do You Hear the People Sing?', content: '學生號召起義，象徵社會覺醒與抗爭。' }, { title: '第二幕: On My Own', content: '艾潘妮獨唱單戀之苦，呈現孤獨真誠的愛。' }, { title: '第二幕: One Day More', content: '革命前夕，命運交織的高潮時刻。' }, { title: '終曲: Finale', content: '尚萬強安息，全體合唱愛與寬恕，象徵救贖。' }] },
+            { 
+                id: 'les_mis', 
+                icon: 'fa-solid fa-flag', 
+                title: '悲慘世界', 
+                en: 'Les Misérables', 
+                tag: '史詩音樂劇', 
+                img: 'les_mis.jpg', 
+                intro: '<p>故事改編自雨果（Victor Hugo）的小說，背景為 19 世紀法國，圍繞「法律、良心、救贖與革命」。</p><p>主角尚萬強（Jean Valjean）因偷麵包救家人，被判苦役十九年。出獄後，他因主教的仁慈而決心改過自新，改名換姓，成為成功的工廠主與市長。然而，一生執著於法律正義的警察 賈維（Javert） 始終追捕他。</p><p>尚萬強收養被剝削的工人 芳婷（Fantine）之女珂賽特（Cosette），撫養她長大。多年後，珂賽特愛上青年革命者馬利尤斯（Marius）。</p><p>巴黎爆發學生革命，馬利尤斯參與街壘戰。尚萬強為救愛人之子，深入戰火，並在關鍵時刻饒恕賈維。賈維無法面對法律與良心的衝突，選擇自盡。</p><p>革命失敗，馬利尤斯倖存並與珂賽特結婚。尚萬強在平靜中辭世，完成一生的救贖。</p>', 
+                details: [
+                    { title: '第一幕 Act I: Look Down', content: '故事從苦役場開始，尚萬強與其他囚犯在沉重的勞動中度日，賈維以冷酷無情的態度監督著一切。囚犯被視為低等而無價值的人，這首歌迅速建立出社會的不公與壓迫，也揭示尚萬強與賈維之間日後無法化解的對立。' },
+                    { title: 'Valjean’s Soliloquy', content: '尚萬強出獄後被社會拒於門外，憤怒與絕望幾乎讓他再次墮落，但主教的仁慈讓他陷入深刻的內心掙扎。最終他選擇放下仇恨，改名換姓，決心成為一個正直的人，這首歌象徵他人生的重生與救贖的開始。' },
+                    { title: 'At the End of the Day', content: '工廠裡的工人們唱出一天辛苦勞動後的疲憊與無奈，芳婷努力隱瞞自己有孩子的事實，只求能保住工作寄錢給女兒。歌曲呈現貧窮如何逐步吞噬人的尊嚴，也為芳婷的悲劇命運鋪陳背景。' },
+                    { title: 'I Dreamed a Dream', content: '芳婷在被社會拋棄後，回憶自己年輕時對愛與幸福的美好幻想，並痛苦地意識到這些夢想早已破滅。她的歌聲訴說一個善良卻被現實擊垮的女性，成為全劇最動人的悲劇時刻之一。' },
+                    { title: 'Lovely Ladies', content: '為了女兒能活下去，芳婷一步步被迫賣掉自己的頭髮、牙齒，最終墮入妓女的生活。熱鬧的旋律包裹著殘酷的現實，諷刺社會如何將弱者逼向深淵，卻又對她們加以譴責。' },
+                    { title: 'Fantine’s Death', content: '病重的芳婷臨終前仍放不下女兒，尚萬強在床邊承諾會找回並照顧珂賽特。賈維此時出現試圖逮捕尚萬強，使法律與憐憫的衝突更加鮮明，也讓芳婷的悲劇人生畫下句點。' },
+                    { title: 'Castle on a Cloud', content: '年幼的珂賽特在德納第夫婦家中遭受虐待，卻仍天真地幻想著一個沒有恐懼、充滿溫暖的地方。這首歌以純真的視角反襯殘酷現實，使觀眾更加心疼她的處境。' },
+                    { title: 'Master of the House', content: '德納第夫婦以誇張滑稽的方式炫耀自己的狡詐與貪婪，一邊欺騙客人，一邊剝削珂賽特。這首歌以黑色幽默揭露人性的醜陋，同時短暫緩解整體劇情的沉重氛圍。' },
+                    { title: 'The Confrontation', content: '賈維終於與尚萬強正面衝突，揭露他過去的身分，兩人以激烈的對唱展現彼此信念的對立。一方相信人可以改變，另一方堅信法律不容動搖，這場對峙明確點出全劇最核心的思想衝突。' },
+                    { title: 'Stars', content: '賈維獨自仰望星空，將法律視為如宇宙秩序般神聖而不可侵犯。他深信只要維護規則，世界就能保持平衡，這首歌讓觀眾理解他為何始終無法接受尚萬強的改變。' },
+                    { title: 'Do You Hear the People Sing?', content: '學生革命者唱出人民的怒吼，號召眾人為自由與正義而戰。歌曲象徵社會的覺醒，也讓故事從個人的苦難，擴展為整個時代的抗爭。' },
+                    { title: '第二幕 Act II: On My Own', content: '艾潘妮在夜色中獨自唱出對馬利尤斯的愛，她明白這份感情注定得不到回應，卻仍無法停止付出。這首歌呈現最孤獨、最卑微卻也最真誠的愛。' },
+                    { title: 'One Day More', content: '革命前夕，所有角色的心境交織在同一首歌中，有人期待未來，有人恐懼明天，也有人準備迎接犧牲。這首歌將多條故事線匯聚，形成命運即將翻轉的高潮時刻。' },
+                    { title: 'Drink with Me', content: '學生們在戰鬥前靜靜飲酒，回憶友情與青春，心中清楚自己可能再也看不到明天。平靜的旋律中充滿哀傷，展現革命者面對死亡時的成熟與無奈。' },
+                    { title: 'Bring Him Home', content: '尚萬強在街壘中為馬利尤斯祈禱，希望上天能讓這名年輕人平安生還。歌聲溫柔而虔誠，展現尚萬強無私的父愛與慈悲之心。' },
+                    { title: 'The Final Battle', content: '街壘戰正式爆發，槍火與死亡迅速吞噬年輕的革命者，理想在現實面前徹底崩潰。這段音樂呈現革命失敗的殘酷代價。' },
+                    { title: 'Javert’s Suicide', content: '賈維在被尚萬強放走後，無法接受法律與良心之間的矛盾，他一生信奉的秩序完全崩塌，最終選擇結束自己的生命，象徵無法妥協的信念走向毀滅。' },
+                    { title: 'Empty Chairs at Empty Tables', content: '革命結束後，馬利尤斯獨自坐在空蕩的桌旁，悼念犧牲的朋友，質疑自己為何能夠活下來。這首歌描寫倖存者最深的痛苦與哀悼。' },
+                    { title: 'Finale', content: '尚萬強在生命的最後時刻回顧自己的一生，芳婷與艾潘妮迎接他走向安息。全體合唱再次唱出愛與寬恕，象徵即使世界充滿苦難，人仍能在彼此的愛中獲得救贖。' }
+                ] 
+            },
             { id: 'st_pauls', icon: 'fa-solid fa-church', title: '聖保羅大教堂', en: 'St Paul\'s Cathedral', tag: '巴洛克地標', img: 'st_pauls.jpg', intro: '雷恩爵士設計的巴洛克傑作，其巨大的圓頂主宰了倫敦天際線三百年。', details: [{ title: '登頂體驗', content: '挑戰 528 階樓梯到達金迴廊 (Golden Gallery)，可俯瞰倫敦絕美全景。中途的耳語廊 (Whispering Gallery) 擁有神奇的傳聲效果。' }] }
         ];
 
@@ -726,7 +808,7 @@
         // Checklist Logic
         const defaultChecklistItems = [
             "信用卡(VISA/MASTER CARD)-可當交通卡用",
-            "行動電源 (須標示Wh，100Wh以下免申報)",
+            "行動電源 (須標示Wh，100Wh以下免申報，100-160W須向航空公司申請許可。且每個電源須單獨放入透明夾鏈袋，並用決用膠帶封住USB孔或電極)",
             "泳衣", "毛巾", "牙刷", "保暖衣物 (0-9°C)",
             "240V 轉接插頭", "充電器",
             "手機掛繩", "護照", "雨具/防水風衣"
