--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                     {time:"08:30", title:"倫敦塔", type:"sight", note:"KLOOK預訂", mapQuery: "Tower of London",
                      transport: {mode: "地鐵", text: "Bond St → Tower Hill", detail: "Jubilee線至Westminster轉Circle/District線，約 30 分鐘"}},
                     {time:"11:30", title:"波羅市場", type:"food", note:"美食市集", mapQuery: "Borough Market",
-                     transport: {mode: "步行", text: "跨越倫敦塔橋", detail: "約 1.2 公里，20 分鐘 (風景優美)"}},
+                     transport: {mode: "步行/巴士343(25分鐘)", text: "跨越倫敦塔橋", detail: "約 1.2 公里，20 分鐘"}},
                     {time:"14:30", title:"Skuna Boats", type:"fun", note:"烤肉船", mapQuery: "Skuna Boats Canary Wharf",
                      transport: {mode: "地鐵", text: "London Bridge → Canary Wharf", detail: "Jubilee線，約 10 分鐘，出站步行 8 分鐘"}},
                     {time:"18:30", title:"Blacklock", type:"food", note:"Canary Wharf 分店", mapQuery: "Blacklock Canary Wharf"}
@@ -1043,3 +1043,4 @@
     </script>
 </body>
 </html>
+
